<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".addtama.AddTamaActivity">

    <ImageView
        android:id="@+id/imgAdd"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logotamacollection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNewTama"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/tama_cv_backgroud"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAdd">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_new_tama" />

            <TextView
                android:id="@+id/twNewAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/tama_cv_backgroud"
                android:gravity="center_vertical"
                android:text="@string/tama_add"
                android:textAllCaps="true"
                android:textColor="@color/tama_text"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddTama"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/tama_cv_backgroud"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvNewTama">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etIdTama"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/tama_id"
                android:inputType="number"
                android:singleLine="true"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNameTam"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/tama_name"
                android:inputType="text"
                android:singleLine="true"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etGenTama"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/tama_generation"
                android:inputType="text"
                android:singleLine="true"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etYearTama"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/tama_year"
                android:inputType="number"
                android:singleLine="true"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPriceTama"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/tama_price"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSaveTama"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/tama_btn_background"
        android:text="@string/tama_save"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvAddTama" />

    <Button
        android:id="@+id/btnBackAdd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/tama_btn_background"
        android:text="@string/tama_back"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveTama" />


</androidx.constraintlayout.widget.ConstraintLayout>